# htmlwasher

./: .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .prettierrc.json  CLAUDE.md  Cargo.toml  NOTICE  PORTING-NOTES.md  README.md  SPEC.md  biome.json  clippy.toml  clone-other-repos.sh  cspell.json  knip.json  package.json  pnpm-workspace.yaml  tsconfig.json
.claude/: settings.json
.claude/agents/: code-reviewer.md  prompt-engineer.md  python-pro.md  rust-pro.md  test-runner.md  ts-pro.md  web-research-specialist.md
.claude/commands/autonomous/: maintenance-all.md
.claude/commands/bench/: improve.md  run.md
.claude/commands/git/: add-worktree.md  commit.md
.claude/commands/meta/: add-rule.md  code-review-autofix.md  delete-prompt.md  fix-1m-context.md  fix-prompt.md  setup-for-prompt.md  store-prompt.md  write-prompt.md
.claude/commands/scaffold/: python-scaffold.md
.claude/commands/sync/: spec.md
.claude/hooks/: claude-setup-snapshot.mjs  spec-gate.sh  test-gate.sh
.claude/rules/: formatting-guidelines.md  json-config-only.md  memory-promotion.md  minimal-diff.md  no-confirmation-prompts.md  path-notation.md  preserve-todos.md  prompt-engineering-knowledge.md  rule-coverage.md  security.md  self-improving-prompts.md  spec-maintenance.md  task-completion.md  test-maintenance.md
.claude/skills/async-python-patterns/: SKILL.md
.claude/skills/autonomous-task/: SKILL.md
.claude/skills/claude-setup-auditor/: SKILL.md
.github/workflows/: build-native.yml  release-npm.yml  release-pypi.yml
benchmarks/: 2026-07-06-2106-benchmark.md  2026-07-07-2347-benchmark.md  README.md
docs/: PORTING-NOTES.md
docs/trafilaturacore-licences/: README.md  acknowledgements.md  license-report.md
examples/: sample.html
examples/npm-cli/: run.sh
examples/npm-library/: package.json
examples/pypi-library/: .gitignore  README.md  async_example.py  main.py  requirements.txt  run.sh
htmlwasher/: README.md  SPEC.md  package.json
htmlwasher/src/: cli-program.test.ts  cli-program.ts  cli.ts  index.test.ts  index.ts  pipeline.test.ts  pipeline.ts  types.test.ts  types.ts
prompts/2026-06-27-package-naming-convention/: prompt.md
prompts/2026-6-24-init/: prompt.md
prompts/2026-7-7-align-levels-with-trafilatura/: prompt.md
prompts/2026-7-7-rename-to-trafilaturacore/: prompt.md
prompts/2026-7-8-contextractor-content-toggles/: contextractor-content-toggles.md
tools/live-crawl-tester/: README.md  SPEC.md  package.json
tools/wash-corpus-tester/: .gitignore  README.md  SPEC.md  corpus.json
trafilatura-alpha/: README.md  SPEC.md  package.json
trafilatura-alpha/src/: index.test.ts  index.ts
training/: .gitignore  FEATURES.md  README.md  SPEC.md  download_wcxb.py  extract_features.py  make_parity_fixtures.py  pyproject.toml  requirements.txt  train.py
training/tests/: conftest.py  test_extract_features.py  test_model_export.py  test_tfidf.py
(+118 files in other folders)
