# Root Rust workspace for htmlwasher's native extraction core.
# Mirrors ~/r/contextractor's workspace, tightened per the v2 brief:
# unsafe_code = "forbid" (contextractor uses "warn"), Apache-2.0 (matches the repo).
# Cargo.lock IS committed (the pnpm-lock gitignore convention does NOT extend to Cargo).
[workspace]
resolver = "2"
members = ["packages/htmlwasher/native"]

[workspace.package]
version = "0.0.0-alpha.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/glueo/htmlwasher"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
missing_errors_doc = "deny"
panic = "warn"
todo = "warn"
unimplemented = "warn"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"
