# Root Rust workspace for trafilaturacore's native extraction core.
# Mirrors ~/r/contextractor's workspace, tightened per the v2 brief: unsafe_code
# denied for our code (see the [workspace.lints.rust] rationale below — napi-derive
# codegen needs `unsafe` behind a local #[allow], which `forbid` would reject), and
# Apache-2.0 (matches the repo). Cargo.lock IS committed (the pnpm-lock gitignore
# convention does NOT extend to Cargo).
[workspace]
resolver = "2"
members = ["packages/trafilaturacore/native"]

[workspace.package]
version = "0.0.0-alpha.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/glueo/trafilatura"

[workspace.lints.rust]
# `deny` (not `forbid`): our own code never writes `unsafe` (deny is a hard error),
# but napi-derive's generated addon code requires `unsafe` and permits it with a local
# `#[allow(unsafe_code)]` — which `forbid` (unlike `deny`) would override and reject,
# making the napi binding uncompilable. So: deny for us, allowed only inside napi codegen.
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
missing_errors_doc = "deny"
panic = "warn"
todo = "warn"
unimplemented = "warn"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "symbols"
